# specsmith

./: .flake8  .gitignore  .pylintrc  README.md
V0.1/lib/verification_protocol/: LICENSE  README.md  pyproject.toml  setup.cfg
V0.1/lib/verification_protocol/src/verification_protocol/: __init__.py  pytest_plugin.py  unittest_shim.py
V0.1/lib/verification_protocol/tests/: test_pytest.py  test_verification_protocol.py
V0.1/spec-components/: FSM-module-spec.md
V0.1/spec-languages/: script-python-spec.md
V0.2/: Makefile  README.md
V0.2/codingspecs/: coding-C-spec.md  coding-python-spec.md  coding-typescript-spec.md
V0.2/techdoc/: document.vocab.md  specification.spec.md  std.vocab.md  techdoc-core.spec.md  techdoc-encoding-json.spec.md  techdoc-encoding-md.spec.md  techdoc-encoding-verification.spec.md  techdoc-encoding-xml.spec.md  techdoc-encoding.spec.md  techdoc.spec.md  verification-tags.spec.md  verification-tags.vocab.md  vocabulary.spec.md
articles/arch/: arch.md
articles/deeptheory/: 01-deeptheory.md  Makefile  README.md
articles/framework/: .gitignore  01-intro.md  02-oldcontext.md  03-newcontext.md  04-sosodocs.md  05-newdocs.md  07-whyitmatter.md  A0-appendix.md  Makefile  references.bib
lib/verification_protocol/: .gitignore  conftest.py  pyproject.toml  pytest_plugin.py  test_pytest.py  (+2 more)
spec-documents/: meta-generation-spec.md  metadata-spec.md  requirements-doc-spec.md  techdoc-struct-spec.md
spec-languages/: script-python-spec.md
spec-verification/: heuristic-verify-spec.md  verification-protocol-spec.md  verification-tags-spec.md
(+21 files in other folders)
